--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@ canvas {
   width: 100%;
 top:5%;
   text-align: center;
-  font-family: 'Love Ya Like A Sister', cursive;
+ // font-family: 'Love Ya Like A Sister', cursive;
+font-family:'Courier New',Courier, monospace;
   font-size: 40px;
   color: #ea80b0;
   padding: 0 20px;
