--- a/index.html
+++ b/index.html
@@ -295,14 +295,15 @@ setInterval(function() {
 }
     function time() {
         var nowtime = new Date().getTime(); // 现在时间转换为时间戳
-        var futruetime =  new Date('2011/9/6').getTime(); // 未来时间转换为时间戳
+      //  var futruetime =  new Date('2011/9/6').getTime(); // 未来时间转换为时间戳
+	var futruetime =  new Date('2024/6/26').getTime(); // 未来时间转换为时间戳
         var msec = nowtime-futruetime; // 毫秒 未来时间-现在时间
         var time = (msec/1000);  // 毫秒/1000
         var day = parseInt(time/86400); // 天  24*60*60*1000
         var hour = parseInt(time/3600)-24*day;    // 小时 60*60 总小时数-过去的小时数=现在的小时数
         var minute = parseInt(time%3600/60); // 分 -(day*24) 以60秒为一整份 取余 剩下秒数 秒数/60 就是分钟数
         var second = parseInt(time%60);  // 以60秒为一整份 取余 剩下秒数
-        document.getElementById("h1").innerHTML = "Ximi，我们已经认识：<br>"+day+"天"+hour+"小时"+minute+"分"+second+"秒"+"了";
+        document.getElementById("h1").innerHTML = "文七七，我们已经认识：<br>"+day+"天"+hour+"小时"+minute+"分"+second+"秒"+"了";
     }
 </script>
 </body>
